[gd_scene load_steps=9 format=3 uid="uid://6ae31m7rrcxr"]

[ext_resource type="Script" path="res://MainCamera.gd" id="2_i6qqw"]
[ext_resource type="PackedScene" uid="uid://ccv23synovtw6" path="res://Objects/Houses/Junk/rock.tscn" id="3_1jkw4"]
[ext_resource type="LabelSettings" uid="uid://bijjr3jl61de4" path="res://UI/MainMenu/home_label_settings.tres" id="3_5jy7u"]
[ext_resource type="Script" path="res://UI/BuldingMenu/PlacementController.gd" id="3_c281c"]
[ext_resource type="PackedScene" uid="uid://b0krhlmapyjp3" path="res://UI/statsUI/mainUI.tscn" id="3_ev5cs"]
[ext_resource type="Script" path="res://UI/PauseMenu.gd" id="4_y5t4b"]
[ext_resource type="LabelSettings" uid="uid://caqxmmeh7x3jl" path="res://UI/mainUILabelSettings.tres" id="5_3oc2o"]
[ext_resource type="Texture2D" uid="uid://dxm7ow53fscsb" path="res://assets/floor_loop.png" id="5_eimxi"]

[node name="MainLevel" type="Node2D"]
texture_filter = 1

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("2_i6qqw")

[node name="MainUI" parent="Camera2D" instance=ExtResource("3_ev5cs")]

[node name="GameOverScreen" type="CanvasLayer" parent="Camera2D"]
process_mode = 3
visible = false

[node name="Label" type="Label" parent="Camera2D/GameOverScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Game Over"
label_settings = ExtResource("3_5jy7u")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PauseMenu" type="CanvasLayer" parent="Camera2D"]
process_mode = 3
visible = false
script = ExtResource("4_y5t4b")

[node name="VBoxContainer" type="VBoxContainer" parent="Camera2D/PauseMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.5
offset_top = -20.0
offset_right = 25.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Camera2D/PauseMenu/VBoxContainer"]
layout_mode = 2
text = "PAUSED"
label_settings = ExtResource("5_3oc2o")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Camera2D/PauseMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ContinueBtn" type="Button" parent="Camera2D/PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="HSeparator2" type="HSeparator" parent="Camera2D/PauseMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="QuitBtn" type="Button" parent="Camera2D/PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="QuitWindow" type="AcceptDialog" parent="Camera2D/PauseMenu/VBoxContainer/QuitBtn"]
title = "Quit?"
initial_position = 2
size = Vector2i(300, 106)

[node name="Label" type="Label" parent="Camera2D/PauseMenu/VBoxContainer/QuitBtn/QuitWindow"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 2
text = "Progress is not saved
and will be lost"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BaseHouse2" parent="." instance=ExtResource("3_1jkw4")]
texture_filter = 0
position = Vector2(-330, 212)

[node name="BaseHouse3" parent="." instance=ExtResource("3_1jkw4")]
texture_filter = 0
position = Vector2(304, 212)

[node name="PlacementController" type="Node2D" parent="."]
z_index = 1
script = ExtResource("3_c281c")

[node name="floor" type="Sprite2D" parent="."]
z_index = -1
texture_repeat = 3
position = Vector2(0, 350)
texture = ExtResource("5_eimxi")
region_enabled = true
region_rect = Rect2(0, 0, 2000, 100)

[connection signal="pressed" from="Camera2D/PauseMenu/VBoxContainer/ContinueBtn" to="Camera2D/PauseMenu" method="_on_continue_btn_pressed"]
[connection signal="pressed" from="Camera2D/PauseMenu/VBoxContainer/QuitBtn" to="Camera2D/PauseMenu" method="_on_quit_btn_pressed"]
[connection signal="confirmed" from="Camera2D/PauseMenu/VBoxContainer/QuitBtn/QuitWindow" to="Camera2D/PauseMenu" method="_on_quit_window_confirmed"]
